前后端通用json模板，前端读取json自动生成输入界面，后端读取json自动填写表格
